// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearRefinements has a disabled mode 1`] = `
<div
  className="ais-ClearRefinements"
>
  <button
    className="ais-ClearRefinements-button ais-ClearRefinements-button--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Clear all filters
  </button>
</div>
`;

exports[`ClearRefinements renders a clickable button 1`] = `
<div
  className="ais-ClearRefinements"
>
  <button
    className="ais-ClearRefinements-button"
    disabled={false}
    onClick={[Function]}
  >
    Clear all filters
  </button>
</div>
`;

exports[`ClearRefinements renders a clickable button with a custom className 1`] = `
<div
  className="ais-ClearRefinements MyCustomClearRefinements"
>
  <button
    className="ais-ClearRefinements-button"
    disabled={false}
    onClick={[Function]}
  >
    Clear all filters
  </button>
</div>
`;
